# sda.framework

./: .env.example  .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  renovate.json
app/: globals.css  (+2 more)
services/sda-indexer/: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  fly.toml  pyproject.toml
services/sda-indexer/scripts/: deploy_srv_ia_01.sh  extract_ground_truth.py  verify_deepseek_cache.py
services/sda-indexer/src/sda_indexer/: config.py  main.py
services/sda-indexer/src/sda_indexer/api/: auth.py  finalize.py  health.py  structure.py  summarize.py
services/sda-indexer/src/sda_indexer/db/: client.py  documents.py  llm_calls.py  tree_nodes.py
services/sda-indexer/src/sda_indexer/llm/: cache_design.py  client.py  retry.py  router.py
services/sda-indexer/tests/: conftest.py
services/sda-indexer/tests/e2e/: test_canonical_corpus.py
services/sda-indexer/tests/fixtures/: nested.md  pdf_corpus.yaml  tiny.md
services/sda-indexer/tests/integration/: test_contextual_prefix.py  test_db_client.py  test_db_documents.py  test_db_tree_nodes.py  test_end_to_end.py  test_index_extractor.py  test_pdf_mineru_client.py  test_repair.py  test_settings_sync.py  test_structure_workflow_pdf.py  test_toc_detector.py  test_toc_transformer.py  test_workflow_structure_md.py  test_workflow_summarize.py
services/sda-indexer/tests/stress/: run_arxiv_sample.py
services/sda-indexer/tests/unit/: test_api_auth.py  test_cache_design.py  test_config.py  test_llm_client.py  test_llm_retry.py  test_llm_router.py  test_markdown_regex.py  test_prompts_loader.py  test_settings_client.py  test_settings_registry.py  test_settings_types.py  test_splitter.py  test_summarizer.py  test_tree_builder.py  test_validator.py
services/sda-mineru-parser/: .gitignore  Dockerfile  README.md  pyproject.toml
services/sda-mineru-parser/cloudflared/: config.yml.example
services/sda-mineru-parser/src/sda_mineru/: cache.py  download.py  healthz.py  main.py  parser.py
services/sda-mineru-parser/systemd/: sda-mineru.service
services/sda-mineru-parser/tests/: test_cache.py  test_download.py  test_main.py  test_parser.py
(+430 files in other folders)
