[project]
name = "sda-mineru-parser"
version = "0.1.0"
description = "MinerU PDF parsing service for sda.framework Wave 1"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "aiofiles>=24.1.0",
    "pydantic>=2.9.0",
    "structlog>=24.4.0",
    "pypdf>=5.0.0",
    # TODO Task 11: resolve real MinerU package name
    # "magic-pdf[full]>=0.10.0" pins pydantic <2.8.0, conflict con pydantic>=2.9.0.
    # MinerU se ejecuta como subprocess en srv-ia-01 (Task 11),
    # idealmente desde su propio venv aislado.
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "reportlab>=4.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sda_mineru"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"
